# myomnicar

./: CMakeLists.txt  README.md  package.xml  readME.md  requirements.txt
config/: arm_control.yaml  config_sensors.rviz  configfinal.rviz  controllers.yaml  joint_names_myomnicar.yaml
launch/: display.launch  gazebo.launch
meshes/: LeBa_Link.STL  LeFro_Link.STL  RiBa_Link.STL  RiFro_Link.STL  base_link.STL  link1_rot_Link.STL  link2_pris_Link.STL
scripts/: arm_controller.py  omni_keyboard_control.py  sensor_srv.py
urdf/: myomnicar.csv  myomnicar.urdf
